--- a/src/css/QuizWindow.css
+++ b/src/css/QuizWindow.css
@@ -5,6 +5,7 @@
   /* background-image: linear-gradient(100deg, #e4f3f5, #0ddbc3); */
   background-image: linear-gradient(200deg, #0d7c85, #03ebfc, #08fc8e);
   background-size: 100% 100%;
+  padding-top: 100px;
 }
 
 .quizwindow_main_div {
@@ -21,16 +22,19 @@
 }
 
 .timmer_div {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 4px solid #0eb5a2;
+  width: 60px;
+  /* background-color: red; */
+  /* height: 50px; */
+  /* border-radius: 50%;
+  border: 4px solid #0eb5a2; */
 }
 
 .timmer_span {
   font-size: 23px;
   font-weight: 500;
   color: #0f16d9;
+  text-align: center;
+  width: 100%;
 }
 
 .quizwindow_horizental_line {
