--- a/src/css/Quiz.css
+++ b/src/css/Quiz.css
@@ -1,27 +1,22 @@
 .root_div {
-  width: 100vw;
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.header_img_div {
-  /* background-image: url("../images/quiz4.jpg"); */
-  background-image: linear-gradient(120deg, #0d7c85, #03ebfc, #aa00ee);
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background-size: 100%;
-  background-repeat: no-repeat;
-  padding-top: 30px;
+  padding-top: 100px;
+  padding-bottom: 10px;
+  background-image: linear-gradient(120deg, #0d7c85, #03ebfc, #aa00ee);
 }
+/* 
+.header_img_div {
+  background-image: linear-gradient(120deg, #0d7c85, #03ebfc, #aa00ee);
+  padding-top: 100px;
+} */
 
 .quiz_catogery_header {
   text-align: center;
   font-family: "Oswald", sans-serif;
-  font-size: 50px;
-  font-weight: 500px;
+  font-size: 32px;
+  font-weight: 400px;
   color: #ffffff;
-  margin-top: 40px;
+  /* margin-top: 50px; */
 }
 
 .horizental_line {
@@ -29,6 +24,11 @@
   height: 5px !important;
   background: linear-gradient(#ffffff, #ffffff);
 }
+/* 
+.body_div {
+  width: 100%;
+  height: 100%;
+} */
 
 .quiz_catagory_div {
   margin-top: 20px;
