--- a/src/css/QuizForm.css
+++ b/src/css/QuizForm.css
@@ -1,18 +1,21 @@
 .quizform_root_div {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   background-image: linear-gradient(200deg, #0d7c85, #03ebfc, #08fc8e);
+  padding-top: 120px;
+  padding-bottom: 50px;
 }
 
 .quizform_heading {
   font-family: "Oswald", sans-serif;
-  font-size: 40px;
+  font-size: 24px;
   color: #0eb586;
   align-items: center;
 }
 
 .quizform_main_div {
   /* width: 500px; */
+  min-width: 290px;
   padding: 20px 30px 30px 30px;
   background-color: white;
   border-radius: 10px;
