--- a/src/css/QuizWindow.css
+++ b/src/css/QuizWindow.css
@@ -1,15 +1,18 @@
 .quizwindow_root_div {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   /* background-image: url("../images/quiz1.jpg"); */
   /* background-image: linear-gradient(100deg, #e4f3f5, #0ddbc3); */
   background-image: linear-gradient(200deg, #0d7c85, #03ebfc, #08fc8e);
-  background-size: 100% 100%;
-  padding-top: 100px;
+  background-size: 100% 100% !important;
+  padding-top: 110px;
+  padding-bottom: 50px;
 }
 
 .quizwindow_main_div {
-  width: 800px;
+  /* max-width: 1000px;
+  min-width: 300px; */
+  width: 700px;
   padding: 20px 30px 30px 30px;
   background-color: white;
   border-radius: 10px;
@@ -42,20 +45,20 @@
 }
 
 .question_div {
-  margin-top: 30px;
-  height: 30px;
+  margin-top: 20px;
+  max-height: 40px;
 }
 
 .question_text {
   /* font-family: "Oswald", sans-serif; */
-  font-size: 18px;
+  font-size: 15px;
   color: black;
   font-weight: 400px;
 }
 
 .options_div {
   width: 100%;
-  margin-top: 40px;
+  margin-top: 50px;
 }
 
 .individual_option_div {
@@ -86,7 +89,7 @@
 }
 
 .option_text {
-  font-size: 14px;
+  font-size: 13px;
   color: black;
   font-weight: bold;
   margin-left: 10px;
@@ -97,11 +100,11 @@
 
 .quiz_previous_btn,
 .quiz_next_btn {
-  width: 130px !important;
+  width: 110px !important;
   background-color: #0eaec7 !important;
   color: white !important;
   text-transform: capitalize !important;
-  font-size: 16px !important;
+  font-size: 13px !important;
   font-weight: bold !important;
 }
 
